<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PoliceApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <!-- Login -->
    <string name="login_username_hint">请输入您的警号</string>
    <string name="login_password_hint">请输入您的密码</string>
    <string name="login_remember_chk_txt">记住账号</string>
    <string name="login_login_btn_txt">登陆系统</string>
    <string name="login_regist_btn_txt">注册绑定</string>
    
    <!-- Footer -->
    <string name="footer_txt">宁波海曙公安分局版权所有</string>
    
    <!-- Main Menu -->
    <string name="mani_menu_title_txt">宁波市海曙区行政审批系统</string>
    <string name="mani_menu_label_msg_txt">通知公告</string>
    <string name="mani_menu_label_pending_txt">待办事项</string>
    <string name="mani_menu_label_finish_txt">已办事项</string>
    <string name="mani_menu_label_setting_txt">系统设置</string>
    <string name="mani_menu_label_exit_txt">退出系统</string>
    
    <!-- Survey -->
    <string name="titlebar_left_btn_txt">取消</string>
    <string name="titlebar_right_btn_txt">保存</string>
    <string name="site_survey_record_title">踏勘人意见：</string>

</resources>
